
- When a transaction rolled back a savepoint after adding objects and
  subsequently added more objects and committed, an error could be
  raised "ValueError: A different object already has the same oid"
  causing the transaction to fail. Worse, this could leave a database
  in a state where subsequent transactions in the same process would
  fail.

  https://bugs.launchpad.net/zodb/+bug/665452

- Removed a missfeature that can cause performance problems when using
  an external garbage collector with ZEO.  When objects were deleted
  from a storage, invalidations were sent to clients. This makes no
  sense.  It's wildly unlikely that the other connections/clients have
  copies of the garbage.  In normal storage garbage collection, we
  don't send invalidations. There's no reason to send them when an
  external garbage collector is used.

- ZEO client cache simulation misshandled invalidations
  causing incorrect statistics and errors.

3.10.0 (2010-10-08)
===================

New Features
------------

- There are a number of performance enhancements for ZEO storage
  servers.

- FileStorage indexes use a new format. They are saved and loaded much
  faster and take less space. Old indexes can still be read, but new
  indexes won't be readable by older versions of ZODB.

- The API for undoing multiple transactions has changed.  To undo
  multiple transactions in a single transaction, pass a list of
  transaction identifiers to a database's undoMultiple method. Calling a
  database's undo method multiple times in the same transaction now
  raises an exception.

- The ZEO protocol for undo has changed.  The only user-visible
  consequence of this is that when ZODB 3.10 ZEO servers won't support
  undo for older clients.

- The storage API (IStorage) has been tightened. Now, storages should
  raise a StorageTransactionError when invalid transactions are passed
  to tpc_begin, tpc_vote, or tpc_finish.
